<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AltaCliente">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

<RelativeLayout
    android:id="@+id/map_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <LinearLayout
        android:id="@+id/data_gral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/data_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/datos_name"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/data_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/datos_email"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/data_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/datos_phone"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/data_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/datos_pass"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/data_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/datos_pass2"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/DirTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/title_addDireccion" />
        <TextView
            android:id="@+id/DirTAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:text="" />
        <TextView
            android:id="@+id/DirDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/data_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/main_color"
            android:text="@string/map_text_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>
</RelativeLayout>
        <ProgressBar
            android:id="@+id/pBarLogin"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/circular_progressbar"
            android:max="100"
            android:progress="20" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>