<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaDireccionActivity">

    <RelativeLayout
        android:id="@+id/map_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/map_op_dis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dir_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/map_text_alias"
                android:layout_marginTop="5dp"/>
            <EditText
                android:id="@+id/dir_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:editable="false"
                android:inputType="none"
                android:hint="@string/map_text_calle"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dir_nro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:editable="false"
                    android:inputType="none"
                    android:hint="@string/map_text_nro"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:id="@+id/dir_apto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/map_text_apto"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/dir_referencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/map_text_ref"
                android:layout_marginTop="5dp"/>


            <Button
                android:id="@+id/buttonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main_color"
                android:text="@string/map_text_btn"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/map_op_dis"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageButton
                    android:id="@+id/imageButtonLocation"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="top|left"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_button_location"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="4dp"
                    android:contentDescription="@string/map_text_loc"
                    app:srcCompat="@drawable/ic_focus_b" />

                <TextView
                    android:id="@+id/map_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/purple_500"
                    android:text="@string/map_copyright" />
                <ProgressBar
                    android:id="@+id/progressBarMapView"
                    style="?android:attr/progressBarStyleLarge"
                    android:indeterminate="true"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"/>
            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>