<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pedidos_reclamo"
        android:background="@color/main_color"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/pedidos_reclamo_motivo"/>

    <EditText
        android:id="@+id/pedidos_reclamo_motivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:lines="10"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="15"
        android:background="@color/white_trans"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/pedidos_reclamo_detalle"/>

    <EditText
        android:id="@+id/pedidos_reclamo_detalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:lines="10"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="15"
        android:background="@color/white_trans"/>

</LinearLayout>