<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pedidos_calificar"
        android:background="@color/main_color"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/r_rapidez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/calificar_rapidez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pedidos_rapidez"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/calificar_rapidez_star"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/r_comida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/calificar_comida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:text="@string/pedidos_comida"/>
        <RatingBar
            android:id="@+id/calificar_comida_star"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/r_servicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/calificar_servicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:text="@string/pedidos_servicio"/>
        <RatingBar
            android:id="@+id/calificar_servicio_star"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/pedidos_observa"/>

    <EditText
        android:id="@+id/calificar_servicio_obs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:lines="10"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="15"
        android:background="@color/white_trans"/>

</LinearLayout>